Use foreign api for native calls